--- a/index.html
+++ b/index.html
@@ -59,6 +59,42 @@
                  </div>
             
          </section>
+
+         <!-- featured section -->
+          <section class="container w-11/12 mx-auto mb-20">
+            <div class="w-2/3 mx-auto text-center space-y-5 mb-12">
+                <h3 class="text-5xl font-bold">Our Featured Products</h3>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+
+            <!-- cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                <!-- card-1 -->
+                 <div class="text-center space-y-4 bg-linear-65 from-white to-gray-200 rounded-xl p-7">
+                    <img class="mx-auto" src="./images/tea-1.png" alt="">
+                    <h5 class="font-bold text-xl">Milk Tea</h5>
+                    <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                 </div>
+                <!-- card-1 -->
+                 <div class="text-center space-y-4 bg-linear-65 from-gray-200 to-white rounded-xl p-7">
+                    <img class="mx-auto" src="./images/tea-2.png" alt="">
+                    <h5 class="font-bold text-xl">Black Tea</h5>
+                    <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                 </div>
+                <!-- card-1 -->
+                 <div class="text-center space-y-4 bg-linear-65 from-white to-gray-200 rounded-xl p-7">
+                    <img class="mx-auto" src="./images/tea-3.png" alt="">
+                    <h5 class="font-bold text-xl">Lemon Tea</h5>
+                    <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                 </div>
+                <!-- card-1 -->
+                 <div class="text-center space-y-4 bg-linear-65 from-gray-200 to-white rounded-xl p-7">
+                    <img class="mx-auto" src="./images/tea-4.png" alt="">
+                    <h5 class="font-bold text-xl">Green Tea</h5>
+                    <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                 </div>
+            </div>
+          </section>
      </main>
 
      <!-- footer -->
