meet super clinet section added with card position with responsiveness

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
                 <h2 class="font-extrabold text-7xl">It's good <br>
                 tea time at The Tea House</h2>
                 <p class="text-[#777777] text-lg">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="bg-linear-65 from-red-500 to-orange-500 py-4 px-5 rounded-xl text-white font-bold">Explore More</button>
+                <button class="bg-linear-65 from-red-500 to-orange-500 py-4 px-5 rounded-xl text-white font-bold">Explore More
+                    <span class="-rotate-45 inline-block">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </span>
+                </button>
             </div>
 
              <!-- right -->
@@ -99,7 +103,7 @@
           <!-- great tea section-->
           <section class="container w-11/12 mx-auto md:flex gap-12 mb-25">
             <!-- grid section -->
-            <div class="grid grid-cols-2 gap-5 md:w-1/2">
+            <div class="grid grid-cols-2 grid-rows-3 gap-5 md:w-1/2">
                 <!-- first -->
                  <div class="bg-linear-65 from-[#FF0000] to-[#FF8938] opacity-60 w-full h-32 rounded-2xl row-span-1">
                     
@@ -126,6 +130,43 @@
                 <p class="text-[#777777] w-4/5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
           </section>
+
+          <!-- meet super client section -->
+           <section class="container w-11/12 mx-auto bg-gradient-to-r from-orange-400 to-red-500 p-[40px] md:p-[70px] md:flex gap-15 items-center rounded-xl">
+            <!-- left side div -->
+             <div class="md:w-1/2 space-y-5">
+                <h3 class="text-[30px] md:text-[45px] font-extrabold text-white">Meet Our Super <br> Clients</h3>
+                <p class="text-gray-300 md:w-4/5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="bg-white py-4 px-5 font-bold text-xl rounded-xl">Show All</button>
+             </div>
+
+            <!-- right side side div -->
+             <div class="pace-y-[57px] md:w-1/2 mt-15 md:mt-0">
+                <!-- card-1 -->
+                 <div class="bg-white p-10 rounded-[10px] relative opacity-60">
+                    <img class="absolute -top-6 -left-6" src="./images/client.png" alt="">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="font-bold text-[#1C1C1C] mt-4">Ilham Yuda</h5>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                 </div>
+
+                 <!-- card-2 -->
+                 <div class="bg-white p-10 rounded-[10px] relative -top-20 -left-10 md:-top-20 md:-left-35 z-10">
+                    <img class="absolute -top-6 -left-6" src="./images/client.png" alt="">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="font-bold text-[#1C1C1C] mt-4">Ilham Yuda</h5>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                    <img class="relative top-2 left-[95%]" src="./images/circles.png" alt="">
+                 </div>
+                <!-- card-3 -->
+                 <div class="bg-white p-10 rounded-[10px] relative opacity-60 -mt-44 md:-mt-32">
+                    <img class="absolute -top-6 -left-6" src="./images/client.png" alt="">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="font-bold text-[#1C1C1C] mt-4">Ilham Yuda</h5>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                 </div>
+             </div>
+           </section>
      </main>
 
      <!-- footer -->
