news and event section added with responsive

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </section>
 
           <!-- meet super client section -->
-           <section class="container w-11/12 mx-auto bg-gradient-to-r from-orange-400 to-red-500 p-[40px] md:p-[70px] md:flex gap-15 items-center rounded-xl">
+           <section class="container w-11/12 mx-auto bg-gradient-to-r from-orange-400 to-red-500 p-[40px] md:p-[70px] md:flex gap-15 items-center rounded-xl mb-25">
             <!-- left side div -->
              <div class="md:w-1/2 space-y-5">
                 <h3 class="text-[30px] md:text-[45px] font-extrabold text-white">Meet Our Super <br> Clients</h3>
@@ -167,6 +167,41 @@
                  </div>
              </div>
            </section>
+
+           <!-- news and event section -->
+            <section class="container w-11/12 mx-auto mb-25">
+                <div class="w-4/5 md:w-3/5 mx-auto text-center mb-[50px]">
+                    <h3 class="font-bold text-[45px]">News & Events</h3>
+                <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                </div>
+                <!-- cards container -->
+                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <!-- card-one -->
+                     <div class="border-2 border-[#D2D2D2] p-[22px] rounded-2xl space-y-4">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                        <p class="text-[#777777]">Feb 05, 2027</p>
+                        <h4 class="font-extrabold text-xl">Collecting 8 points for <br>discount</h4>
+                        <p class="text-[#777777]">There are many variations of passages <br> of Lorem Ipsum available.</p>
+                        <button class="font-bold">Learn More</button>
+                     </div>
+                    <!-- card-two -->
+                     <div class="border-2 border-[#D2D2D2] p-[22px] rounded-2xl space-y-4">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                        <p class="text-[#777777]">Feb 05, 2027</p>
+                        <h4 class="font-extrabold text-xl">Collecting 8 points for <br> discount</h4>
+                        <p class="text-[#777777]">There are many variations of passages <br> of Lorem Ipsum available.</p>
+                        <button class="font-bold">Learn More</button>
+                     </div>
+                    <!-- card-three -->
+                     <div class="border-2 border-[#D2D2D2] p-[22px] rounded-2xl space-y-4">
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                        <p class="text-[#777777]">Feb 05, 2027</p>
+                        <h4 class="font-extrabold text-xl">Collecting 8 points for <br> discount</h4>
+                        <p class="text-[#777777]">There are many variations of passages <br> of Lorem Ipsum available.</p>
+                        <button class="font-bold">Learn More</button>
+                     </div>
+                 </div>
+            </section>
      </main>
 
      <!-- footer -->
