--- a/index.html
+++ b/index.html
@@ -205,8 +205,59 @@
      </main>
 
      <!-- footer -->
-      <footer>
+      <footer class="mb-20 container mx-auto bg-[#231E1E] text-white py-[130px]">
+        <section class="w-11/12 mx-auto">
+            <div class="md:flex justify-between">
+            <img src="./images/logo.png" alt="">
+            <div class="flex gap-5 items-center">
+                <h3 class="font-bold text-2xl">Ready to get strated?</h3>
+                 <button class="bg-white py-4 px-5 font-bold text-black text-xl rounded-xl">Show All</button>
+            </div>
+        </div>
+        <hr class="my-12">
 
+        <!-- links div -->
+         <div class="grid grid-cols-2 lg:grid-cols-4">
+            <div>
+            <h2 class="font-bold text-xl mb-4">Quick Links</h2>
+            <ul class="text-gray-400">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Insurance</a></li>
+                <li><a href="">Privacy Policy</a></li>
+            </ul>
+         </div>
+
+            <div>
+            <h2 class="font-bold text-xl mb-4">Our Services</h2>
+            <ul class="text-gray-400">
+                <li><a href="">Life Insurance</a></li>
+                <li><a href="">Car Insurance</a></li>
+                <li><a href="">Health Insurance</a></li>
+                <li><a href="">House Insurance</a></li>
+            </ul>
+         </div>
+            <div>
+            <h2 class="font-bold text-xl mb-4">Help</h2>
+            <ul class="text-gray-400">
+                <li><a href="">FAQs</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+
+         </div>
+            <div>
+            <h2 class="font-bold text-xl mb-4">Subscribe to our newsletter</h2>
+            <p>Email address</p>
+            <hr class="my-5">
+            <div class="flex gap-10 text-2xl">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+         </div>
+         </div>
+
+        </section>
       </footer>
 </body>
 </html>
